--- a/BTHHWebsite/assets/css/main.css
+++ b/BTHHWebsite/assets/css/main.css
@@ -2768,7 +2768,7 @@ input, select, textarea {
 					-ms-flex-shrink: 1;
 					flex-shrink: 1;
 					padding: 1rem 0 0 0;
-					text-align: center;
+					text-align: left;
 					width: 100%;
 				}
 
@@ -2821,7 +2821,7 @@ input, select, textarea {
 				height: 2.25rem;
 				line-height: 2.25rem;
 				display: inline-block;
-				text-align: center;
+				text-align: left;
 				border-radius: 100%;
 				font-size: 1.25rem;
 			}
